--- a/templates/base.html
+++ b/templates/base.html
@@ -9,21 +9,21 @@
     <title>Bank Search</title>
 </head>
 <body class="bg-custom">
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+    <nav class="navbar navbar-expand-lg  navbar-custom">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            Bank Search
+          <a class="navbar-brand logo-title" href="#">
+            BANK SEARCH
           </a>
           <div class="ms-auto">
             <form class="input-group " action="/" method="POST">
               <input type="text" class="form-control campo-pesquisar" placeholder="Pesquisar..." name="banco">
-              <input type="submit" class="btn btn-dark text-white" type="button" value = "Pesquisar">
+              <input type="submit" class="btn btn-search" type="button" value = "Pesquisar">
             </form>
           </div>
         </div>
       </nav>
     {% block body %} {% endblock %}
-    <footer class="bg-dark text-white text-center p-3">
+    <footer class="text-center p-3">
         &copy; 2024 Todos os direitos reservados
       </footer>
       
