--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 
 {% block body %} 
 <div class="container centralizar-conteudo">
-    <h2 class="text-center text-white pt-4 pb-4 info-banco">Olá usuário! Qual banco você deseja pesquisar?</h2>
+    <h2 class="text-center pt-4 pb-4 info-banco">Olá usuário! Qual banco você deseja pesquisar?</h2>
     <div class="row justify-content-center">
       <div class="col-md-6 text-center">
         <form action="/" method="POST">
           <input type="text" class="form-control mb-2" name="banco" placeholder="Pesquisar...">
-          <input type="submit" class="btn btn-dark text-white" type="button" value = "Pesquisar">
+          <input type="submit" class="btn btn-search" type="button" value = "Pesquisar">
         </form>
       </div>
     </div>
