--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,19 +9,32 @@ a{
     cursor: pointer;
 }
 
+.logo-title{
+    color: #8b9aff;
+    text-decoration: none;
+}
+
+.logo-title:hover{
+    color: #ACB7F2;
+}
 /* Definindo as cores para a navbar e o background */
 .navbar-custom {
-    background-color: #1e2124;
+    background-color: #373636;
 }
 .bg-custom {
-    background-color: #2b3035;
+    background-color: #fefcff;
+}
+.btn-search{
+    background-color: #8b9aff;
+    color: #fefcff;
 }
 
-/* cor do texto */
-.info-banco {
-    color: white;
+.btn-search:hover{
+    background-color: #fefcff;
+    box-shadow: 0px 0px 17px -8px rgba(0,0,0,0.75);
+    color: #8b9aff;
+    transition: 0.4s!important;
 }
-
 
 /* Tudo isso ae é pra ajeitar o footer */
 html {
@@ -38,8 +51,8 @@ footer {
     bottom: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
-    background-color: #343a40; /* Change the background color as needed */
-    color: white; /* Change the text color as needed */
+    background-color: #373636; /* Change the background color as needed */
+    color: #8b9aff; /* Change the text color as needed */
     text-align: center;
     padding-top: 20px; /* Vertical padding for the content inside the footer */
 }
