--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,13 +8,17 @@
     background-color: #1e2124;
 }
 .bg-custom {
-    background-color: #2b3035;
+    background-color: #ffff;
+}
+
+.nome-item{
+    color:#373636 !important;
+}
+h3{
+    color: #8b9aff!important;
 }
 
 /* cor do texto */
-.info-banco {
-    color: white;
-}
 
 
 /* Tudo isso ae é pra ajeitar o footer */
@@ -27,16 +31,6 @@ body {
     margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    background-color: #343a40; /* Change the background color as needed */
-    color: white; /* Change the text color as needed */
-    text-align: center;
-    padding-top: 20px; /* Vertical padding for the content inside the footer */
-}
 
 /* Estilos específicos para o container "Nome Banco" */
 
@@ -52,7 +46,7 @@ footer {
 }
 
 .banco-container .list-unstyled .nome-item {
-    font-size: 12px; /* Tamanho menor para os nomes dos itens */
+    font-size: 30px; /* Tamanho menor para os nomes dos itens */
     -text-decoration-line: underline;
     text-decoration-color: rgb(255, 255, 255); /* Defina a cor do sublinhado */
     font-family: "Helvetica";
@@ -63,7 +57,6 @@ footer {
     font-weight: bold;
     -font-family: "Verdana";
     -text-decoration-line: underline;
-    -text-decoration-color: rgb(255, 255, 255); /* Defina a cor do sublinhado */
 }
 
 /* Ajustando setinha da lista das bandeiras */
